timeago 以及 about页面

--- a/trunk/app/assets/javascripts/ktv/application.js.erb
+++ b/trunk/app/assets/javascripts/ktv/application.js.erb
@@ -4,6 +4,12 @@
 //= require ./jquery.psvr
 //= require ./sdk
 //= require i18n/jquery.ui.datepicker-zh-CN
+//= require jquery.timeago
+//= require jquery.timeago.settings
+//= require jquery.atwho
+//= require jquery.hotkeys
+//= require jquery.chosen
+//= require jquery.autogrow-textarea
 //= require jquery.cookie
 //= require jquery.metadata
 //= require jquery.masonry
