--- a/trunk/app/assets/stylesheets/ktv/__qua.css.scss.erb
+++ b/trunk/app/assets/stylesheets/ktv/__qua.css.scss.erb
@@ -1594,12 +1594,9 @@
   	background: #fff;
   	border: 1px solid #999;
   	border-bottom: 1px solid #666;
-  	display: none;
   	margin: 0;
-  	position: absolute;
-  	top: 27px;
-  	width: 360px;
-  	z-index: 99;
+  	width: 958px;
+  	border-top:none;
   }
   .search .navigator .results_frame
   {
@@ -1627,14 +1624,14 @@
   }
   .results_frame li,.results_frame .result_note
   {
-  	font-size: 12px;
+  	font-size: 14px;
   	padding: 5px 7px;
   }
   .results_frame li.instruction
   {
   	background: #eaeaea;
   	cursor: default;
-  	font-size: 12px;
+  	font-size: 14px;
   }
   .results_frame li.addquestionitem
   {
