--- a/trunk/app/views/welcome/index.html.erb
+++ b/trunk/app/views/welcome/index.html.erb
@@ -11,7 +11,7 @@
 
         <div class="navigator yahe cf">
         <ul>
-        <li class="current"><a href="/tagChannel/272/0/0/f/">最新上传</a></li>
+        <li class="current"><a href="/tagChannel/272/0/0/f/">最新动态</a></li>
         <li class="dot"></li>
         <li><a href="/tagChannel/271/0/0/m/">数学</a></li>
         <li class="dot"></li>
