--- a/trunk/app/assets/javascripts/ktv/app.js.coffee.erb
+++ b/trunk/app/assets/javascripts/ktv/app.js.coffee.erb
@@ -233,12 +233,11 @@ $(document).ready ->
   $('#weizuozhefasongganxie').click( ->
     num = parseInt($('#weizuozhefasongganxie2').html())
     if $('#weizuozhefasongganxie').is('.like')
-      $.get('/coursewares/'+App.data.courseware_id+'/thank',->
-        $('#weizuozhefasongganxie').removeClass('grey')
-        $('#weizuozhefasongganxie').addClass('purple')
-        $('#weizuozhefasongganxie').removeClass('like')
-        $('#weizuozhefasongganxie').addClass('unlike')
-        $('#weizuozhefasongganxie').html('已感谢')
-        $('#weizuozhefasongganxie2').html(num+1)        
-      )
+      $.get('/coursewares/'+App.data.courseware_id+'/thank')
+      $('#weizuozhefasongganxie').removeClass('grey')
+      $('#weizuozhefasongganxie').addClass('purple')
+      $('#weizuozhefasongganxie').removeClass('like')
+      $('#weizuozhefasongganxie').addClass('unlike')
+      $('#weizuozhefasongganxie').html('已感谢')
+      $('#weizuozhefasongganxie2').html(num+1)
   )
