--- a/trunk/app/views/devise/registrations/edit.html.erb
+++ b/trunk/app/views/devise/registrations/edit.html.erb
@@ -51,7 +51,7 @@ $('#change_password_link').click(function(){
     
     <div class="form_sections" style="margin-bottom:18px">
       <p><label for="user_email">头像</label><div class="field_error" id="regerror_name"><%= resource.errors_for_field(:avatar) %></div><br class="clear">
-      <%= avatar_tag(resource,:normal) %><br />
+      <%= avatar_tag(resource,:normal,'padding:1px;border:1px solid #999999') %><br />
         <input id="file_uploader" name="user[avatar]" type="file" style="height:33px;padding-left:0;text-indent:0" size="30" /><br>
               支持 jpg, gif, png 格式的图片，不要超过 2MB。建议图片尺寸为大于等于 100×100 的正方形。
       </p>
