--- a/trunk/app/views/application/_flo_footer.html.erb
+++ b/trunk/app/views/application/_flo_footer.html.erb
@@ -2,7 +2,7 @@
 <div class="__flo">
   <footer>
     <div class="footer-content">
-      <span class="psvr_foot">版权所有 <span class="psvr_en">&copy;</span> 2012 Kejian.TV 课件交流系统.</span>
+      <span class="psvr_foot">版权所有 <span class="psvr_en">&copy;</span> 2012 Kejian.TV. 课件著作权为原作者所有.</span>
       <ul class="psvr_footul">
         <li>
           <a href="/">返回首页</a>
@@ -11,7 +11,7 @@
           <a href="/welcome/shuffle">手气不错</a>
         </li>
         <li>
-          <a href="/welcome/about">关于我们</a>
+          <a href="/welcome/about#ktv">关于我们</a>
         </li>
         <li class="noslash">
           <a href="/cpanel">后台管理</a>
