--- a/trunk/app/views/application/_sdk_footer.html.erb
+++ b/trunk/app/views/application/_sdk_footer.html.erb
@@ -2,11 +2,11 @@
 <div class="__sdk">
   <footer>
     <div class="wrapper">
-      <p class="title">版权所有 <span class="en">&copy;</span> 2012 <a href="http://<%=Setting.ktv_domain%>">Kejian.TV</a> 课件交流系统. 课件著作权为原作者所有.</p>
+      <p class="title">版权所有 <span class="en">&copy;</span> 2012 <a href="http://<%=Setting.ktv_domain%>">Kejian.TV</a>. 课件著作权为原作者所有.</p>
       <p class="links">
         <a href="/">返回首页</a>
         <a href="/welcome/shuffle">手气不错</a>
-        <a href="/welcome/about">关于我们</a>
+        <a href="/welcome/about#ktv">关于我们</a>
         <a href="/cpanel">后台管理</a>
       </p>
     </div>
