--- a/trunk/app/views/layouts/application.html.erb
+++ b/trunk/app/views/layouts/application.html.erb
@@ -87,7 +87,7 @@
           <ul id="account-settings">
             <li><a class="user" href="<%= user_path(current_user) %>"><%= avatar_tag(current_user,:small47) %><%= current_user.name %></a>
               <ul>
-                <li><a href="<%= profile_path current_user %>">课件管理</a></a>
+                <li><a href="<%= profile_path current_user %>">邀请好友注册</a></a>
                 <li><a href="<%= edit_user_registration_path %>">账号设置</a></a>
                 <li><a href="#" id="Intercom">意见反馈</a></a>
                 <li><a href="<%= logout_path %>">退出</a></li>
