--- a/trunk/app/views/welcome/index.html.erb
+++ b/trunk/app/views/welcome/index.html.erb
@@ -11,11 +11,9 @@
 
         <div class="navigator yahe cf">
         <ul>
-        <li class="current"><a href="/tagChannel/272/0/0/f/">最新动态</a></li>
-        <li class="dot"></li>
-        <li><a href="/tagChannel/271/0/0/m/">数学</a></li>
-        <li class="dot"></li>
-        <li><a href="/tagChannel/272/0/0/f/">计算机</a></li>
+          <li class="current"><a href="/">最新动态</a></li>
+          <li class="dot"></li>
+          <li><a href="/tagChannel/271/0/0/m/">所有课程</a></li>
         </ul>
         </div>
         </div>
